# voice-mcp

./: .mcp.json  README.md  pyproject.toml
src/voice_mcp/: __init__.py  audio.py  server.py  tools.py  transcribe.py  tts.py
