[project]
name = "voice-mcp"
version = "0.1.0"
description = "Voice MCP server with speech-to-text (Whisper) and text-to-speech (Supertonic)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "faster-whisper>=1.0.0",
    "supertonic>=0.1.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
]

[project.scripts]
voice-mcp = "voice_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_mcp"]
